# save4223-cabinet-pi

./: .gitignore  README.md  RFID_issues.md  USAGE_GUIDE.md  config.cloud.example.json  config.example.json  config.json  config.minimal.json  mock_trigger.py  pyproject.toml  quickstart.py  requirements.txt  run_tests.py  test_api.py  test_api_curl.sh  test_connection.py  test_display.py  test_full_flow.py  test_hardware.py  test_rfid_params.py
display/: README.md  display.py  index.html  launch-display.py  main.js  package.json  preload.js  renderer.js  styles.css  test-panel.html
docs/: CLOUD_MIGRATION.md  HYBRID_ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  curl-api-guide.md  tailscale-ssl.md
experiments/: locks.py  pull_gpio.py  ws2812b_demo.py
scripts/: full_reset_local_db.py
src/: __init__.py  api_client.py  config.py  inventory_manager.py  local_db.py  main.py  pairing_handler.py  state_machine.py  sync_worker.py
src/hardware/: __init__.py  base.py  hid_keyboard_reader.py  hidraw_reader.py  mock.py  raspberry_pi.py
tests/: mock_server.py  run_tests.sh  test_api.py  test_api_server.py  test_integration.py  test_local_db.py  test_state_machine.py
