[project]
name = "cabinet-pi"
version = "0.1.0"
description = "Smart Cabinet Pi - Raspberry Pi controller for Save4223 Smart Lab Inventory System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adafruit-circuitpython-pca9685>=3.4.11",
    "adafruit-circuitpython-servokit>=1.3.15",
    "black>=23.0.0",
    "nicegui>=1.4.0",
    "opencv-python>=4.8.0",
    "pyserial>=3.5",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pyzbar>=0.1.9",
    "requests>=2.31.0",
    "rpi-gpio>=0.7.1",
    "spidev>=3.6",
]
